# Hydrogen

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  live.main.tex
docs/: DFA.md
examples/: demo.hy  draft.hy  draft2.hy  hy-asm.txt  input.hy  test.hy
examples/old/: test.hy
grammars/: Hydrogen.g4  HydrogenLexer.g4  HydrogenParser.g4
inc/: error.h  params.h
include/: args.h  ast.hpp  config.hpp  data_holder.hpp  debug.h  debug_visitor.hpp  dynarray.h  dynstr.h  exit.hpp  exit_reason.hpp  expression.hpp  hyc.h  hyc.hpp  hydrogen_lexer_base.hpp  hydrogen_visitor.hpp  interpreter.hpp  lex.h  lexer.hpp  log.hpp  msg.hpp  source_visitor.hpp  str.hpp  tok.h  token.hpp  utils.hpp
include/ast/: decl.hpp  expression.hpp  identifier.hpp  node.hpp  source.hpp  statements.hpp
include/interface/: lexer.hpp  parser.hpp
src/: args.c  ast.cpp  config.cpp  debug_visitor.cpp  dynarray.c  error.c  exit.cpp  expression.cpp  hyc.c  hyc.cpp  hydrogen_visitor.cpp  interpreter.rs  lex.c  lexer.cpp  lexer.rs  log.cpp  main.cpp  main.rs  params.c  parser.rs  source_visitor.cpp  test.c  token.cpp  utils.cpp
src/interface/: lexer.cpp  parser.cpp
src/lexer/: error.rs  get_identifier_type.cpp  lex.branch_node.clean.part.hpp  lex.branch_node.part.hpp  lex.cpp  lexer.cpp  location.rs  next_token.rs  read_literals.cpp  readnext.cpp  readstream.cpp  token.rs  utils.cpp  utils.rs
src/parser/: decl.rs  error.rs  expr.rs  nodes.rs  parts.rs
